DuPont DevSB/src/objects/ccrz__E_ProductStorefront__c.object
<CustomObject>
    <description>Product data specific to a particular storefront</description>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <label>CC Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Product Storefronts</relationshipLabel>
        <relationshipName>CC_Product_Storefronts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__ShortURL__c</fullName>
        <description>a shortened url to a product in a specific storefront</description>
        <label>ShortURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <label>Storefront</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>CC Product Storefront</label>
    <nameField>
        <displayFormat>PSF-{000000}</displayFormat>
        <label>CC Product Storefront Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Product Storefronts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>